# doxa

./: .gitignore  Cargo.toml  README.md  fmt.sh
crates/doxa/: Cargo.toml
crates/doxa-audit/: Cargo.toml  README.md
crates/doxa-audit/src/: builder.rs  entity.rs  event.rs  layer.rs  lib.rs  logger.rs  sea_orm_impls.rs
crates/doxa-auth/: Cargo.toml  README.md
crates/doxa-auth/src/: claims.rs  config.rs  context.rs  extractors.rs  layer.rs  lib.rs  middleware.rs  openapi.rs
crates/doxa-auth/src/provider/: local_jwt.rs  mod.rs  oidc_introspection.rs  oidc_jwks.rs
crates/doxa-docs/: Cargo.toml  README.md
crates/doxa-docs/src/: builder.rs  contribution.rs  doc_params.rs  doc_responses.rs  doc_traits.rs  extractor.rs  handler_ops.rs  headers.rs  inner_schema.rs  lib.rs  mount.rs  private_dispatch.rs  problem.rs  router_ext.rs  routes_macro.rs  sse.rs
crates/doxa-docs/src/ui/: config.rs  mod.rs  scalar.rs
crates/doxa-docs/tests/: sse_openapi.rs
crates/doxa-macros/: Cargo.toml  README.md
crates/doxa-macros/src/: api_error.rs  capability.rs  lib.rs  method.rs  sig.rs  sse_event.rs
crates/doxa-macros/tests/: api_error.rs  end_to_end.rs  extractor_wrappers.rs  generic_wrapper_schemas.rs  header_inference.rs  inference.rs  method_shortcuts.rs
crates/doxa-policy/: Cargo.toml  README.md
crates/doxa-policy/src/: capability.rs  cedar_core.rs  error.rs  extension.rs  http.rs  lib.rs  router.rs  store.rs  test_support.rs  uid.rs
crates/doxa-policy/src/policy/: cedar.rs  mod.rs
crates/doxa-protected/: Cargo.toml  README.md
crates/doxa-protected/src/: lib.rs
crates/doxa/examples/: full_test.rs
crates/doxa/src/: lib.rs
