[workspace]
resolver = "2"
members = [
    "crates/doxa",
    "crates/doxa-docs",
    "crates/doxa-macros",
    "crates/doxa-protected",
    "crates/doxa-audit",
    "crates/doxa-auth",
    "crates/doxa-policy",
]

[workspace.metadata.release]
# Publish crates in dependency order with a delay for index propagation.
publish = true
push = true
tag = true
tag-prefix = ""
# Consolidate into a single tag for the workspace (not per-crate).
consolidate-commits = true
# Pre-release check: ensure everything builds and tests pass.
verify = true

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["edmiester777"]
repository = "https://github.com/edmiester777/doxa"
homepage = "https://github.com/edmiester777/doxa"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
doxa = { path = "crates/doxa", version = "0.1.2" }
doxa-docs = { path = "crates/doxa-docs", version = "0.1.2", default-features = false }
doxa-macros = { path = "crates/doxa-macros", version = "0.1.2" }
doxa-protected = { path = "crates/doxa-protected", version = "0.1.2" }
doxa-audit = { path = "crates/doxa-audit", version = "0.1.2", default-features = false }
doxa-auth = { path = "crates/doxa-auth", version = "0.1.2", default-features = false }
doxa-policy = { path = "crates/doxa-policy", version = "0.1.2", default-features = false }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"

# HTTP / web
http = "1"
http-body-util = "0.1"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
reqwest = { version = "0.13", features = ["json", "form"] }

# OpenAPI
utoipa = { version = "5", features = ["macros", "uuid", "chrono"] }
utoipa-axum = "0.2"

# Proc macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
paste = "1"

# Observability
tracing = "0.1"

# Error handling
thiserror = "2"

# Data formats
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
hex = "0.4"

# ORM (optional, for doxa-audit SeaORM backend)
sea-orm = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json", "with-chrono"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }

# Auth / policy
cached = { version = "0.59", features = ["async_tokio_rt_multi_thread"] }
cedar-policy = { version = "4", features = ["partial-eval"] }
jsonwebtoken = "10"
sha2 = "0.11"

# Secret management
secrecy = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
