[package]
name = "doxa-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Provider-agnostic OIDC / RFC 7519 / RFC 7662 auth middleware with a pluggable Cedar policy engine. Generic over a consumer-defined claim type and session output type so the same library works across services with different claim shapes and authorization vocabularies."
keywords = ["auth", "oidc", "jwt", "axum", "cedar"]
categories = ["authentication", "web-programming::http-server"]

[features]
default = ["axum", "audit"]
# Optional axum integration: enables the auth middleware, the `Auth`
# extractor, and the `IntoResponse` impl on `AuthError`. Disable this
# feature to use the framework-neutral pieces of the crate (Claims,
# providers, Policy resolution) from a non-axum context.
axum = ["dep:axum", "dep:doxa", "dep:tower", "dep:utoipa", "doxa-policy/axum"]
# Optional audit integration: lets the auth middleware stamp actor
# info onto an `AuditEventBuilder` and emit auth-failure events via an
# `AuditLogger` handle carried on `AuthState`. Disable to drop
# `doxa-audit` entirely from the dep graph.
audit = ["dep:doxa-audit"]

[dependencies]
doxa-policy = { workspace = true }
doxa-audit = { workspace = true, optional = true, default-features = false }
doxa-protected = { workspace = true }
doxa = { package = "doxa-docs", path = "../doxa-docs", version = "0.1.0", optional = true }
cedar-policy = { workspace = true }
axum = { workspace = true, optional = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
cached = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
http-body-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
