[package]
name = "doxa-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Framework-neutral Cedar-based authorization policy engine. Policy / PolicyExtension / PolicyStore / PolicyRouter traits with a generic Cedar implementation."
keywords = ["authorization", "policy", "cedar", "rbac", "axum"]
categories = ["authentication", "web-programming"]

[features]
default = []
# Optional axum integration: derives `ApiError` for `AuthError` so the
# error type plugs straight into axum handlers with typed OpenAPI docs.
axum = ["dep:axum", "dep:doxa", "dep:doxa-macros", "dep:http", "dep:serde", "dep:utoipa"]

[dependencies]
cedar-policy = { workspace = true }
cached = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, optional = true }
doxa = { package = "doxa-docs", path = "../doxa-docs", version = "0.1.1", optional = true }
doxa-macros = { workspace = true, optional = true }
http = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
